main/default/objects/RecordType__c/RecordType__c.object-meta.xml
<CustomObject>
    <label>RecordType</label>
    <nameField>
        <label>RecordType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecordType</pluralLabel>
</CustomObject>