main/default/objects/RecordType__c/fields/Picklist10__c.field-meta.xml
<CustomField>
    <fullName>Picklist10__c</fullName>
    <label>Picklist10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordTypeValueSet</valueSetName>
    </valueSet>
</CustomField>