main/default/objects/RecordType__c/fields/Picklist11__c.field-meta.xml
<CustomField>
    <fullName>Picklist11__c</fullName>
    <label>Picklist11</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordTypeValueSet</valueSetName>
    </valueSet>
</CustomField>