main/default/objects/RecordType__c/fields/Picklist12__c.field-meta.xml
<CustomField>
    <fullName>Picklist12__c</fullName>
    <label>Picklist12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordTypeValueSet</valueSetName>
    </valueSet>
</CustomField>